# sqla-with-migration

./: .gitignore  README.md  pyproject.toml
ch01/: README.md  pyproject.toml
ch01/app/db/: models.py
ch02/: cli.py  pyproject.toml
ch02/app/db/: __init__.py  models.py
ch03/: README.md  create_tables.py  docker-compose.yaml  pyproject.toml
ch03/app/db/: __init__.py  models.py
ch03/migrations/: env.py
ch03/migrations/versions/: 7c05579b5f41_.py  dc9a053bbf12_.py
migrations/: env.py
