[tool.poetry]
name = "ch02"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4.27"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
